<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="no.hiof.larseknu.playingwithintents.MainActivity"
    android:orientation="vertical"
    android:weightSum="10">

    <Button
        android:text="@string/start_other_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_other_activity"
        android:layout_weight="1"
        android:onClick="startOtherActivity"/>

    <Button
        android:text="@string/implicitly_start_other_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_implicitly_start_other_activity"
        android:layout_weight="1"
        android:onClick="implicitlyStartOtherActivity" />

    <Button
        android:text="@string/show_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_show_time"
        android:layout_weight="1"
        android:onClick="showTime"/>

    <Button
        android:text="@string/show_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_show_date"
        android:layout_weight="1"
        android:onClick="showDate"/>

    <Button
        android:text="@string/open_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_open_website"
        android:layout_weight="1"
        android:onClick="openWebsite"/>

    <Button
        android:text="@string/run_service_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_run_service_job"
        android:layout_weight="1"
        android:onClick="runServiceJob" />
</LinearLayout>
